--- a/nbomber-infra/influxdb.yaml
+++ b/nbomber-infra/influxdb.yaml
@@ -6,10 +6,7 @@ metadata:
 type: Opaque
 stringData:
   INFLUXDB_DB: nbomber
-  INFLUXDB_USER: user
-  INFLUXDB_READ_USER: readonly
-  INFLUXDB_USER_PASSWORD: admin123
-  INFLUXDB_ADMIN_USER: root
+  INFLUXDB_ADMIN_USER: admin
   INFLUXDB_ADMIN_USER_PASSWORD: admin123
   INFLUXDB_HOST: influxdb
   INFLUXDB_HTTP_AUTH_ENABLED: "true"
