--- a/nbomber-infra/influxdb.yaml
+++ b/nbomber-infra/influxdb.yaml
@@ -6,6 +6,9 @@ metadata:
 type: Opaque
 stringData:
   INFLUXDB_DB: nbomber
+  INFLUXDB_READ_USER: readonly
+  INFLUXDB_USER: user  
+  INFLUXDB_USER_PASSWORD: user123
   INFLUXDB_ADMIN_USER: admin
   INFLUXDB_ADMIN_USER_PASSWORD: admin123
   INFLUXDB_HOST: influxdb
