update NATS args: ["--js"]

--- a/deployments/nbomber-infra.yaml
+++ b/deployments/nbomber-infra.yaml
@@ -186,6 +186,7 @@ spec:
       containers:
         - name: nats
           image: nats:2.9.6
+          args: ["--js"]
           ports:
             - containerPort: 4222
 
